--- a/src/main/resources/templates/album.html
+++ b/src/main/resources/templates/album.html
@@ -5,26 +5,23 @@
     <title>Title</title>
 </head>
 <body>
-<h1 th:text="${titles[0]}"></h1>
-<ul >
-    <li th:text="'Artist: '+${artists[0]}"></li>
-    <li th:text="'Song Count: '+${songCounts[0]}"></li>
-    <li th:text="'length in seconds: '+${lengths[0]}"></li>
-    <li th:text="'Image url: '+${imageUrls[0]}"></li>
-</ul>
-<h1 th:text="${titles[1]}"></h1>
-<ul >
-    <li th:text="'Artist: '+${artists[1]}"></li>
-    <li th:text="'Song Count: '+${songCounts[1]}"></li>
-    <li th:text="'length in seconds: '+${lengths[1]}"></li>
-    <li th:text="'Image url: '+${imageUrls[1]}"></li>
-</ul>
-<h1 th:text="${titles[2]}"></h1>
-<ul >
-    <li th:text="'Artist: '+${artists[2]}"></li>
-    <li th:text="'Song Count: '+${songCounts[2]}"></li>
-    <li th:text="'length in seconds: '+${lengths[2]}"></li>
-    <li th:text="'Image url: '+${imageUrls[2]}"></li>
+<h1>Submission Form</h1>
+<form action="#" th:action="@{/albums}" th:object="${album}" method="POST">
+    <p>Title: <input type="text" th:field="*{title}"/></p>
+    <p>Artist: <input type="text" th:field="*{artist}"/></p>
+    <p>songCount: <input type="number" th:field="*{songCount}"/></p>
+    <p>length: <input type="number" th:field="*{length}"/></p>
+    <p>imageUrl: <input type="number" th:field="*{imageUrl}"/></p>
+    <p><input type="submit" value="Submit"/> <input type="reset" value="Reset"></p>
+</form>
+
+<ul th:each="album:${albums}">
+    <h1 th:text="${album.title}"></h1>
+    <li th:text="${album.artist}"></li>
+    <li th:text="${album.songCount}"></li>
+    <li th:text="${album.length}"></li>
+    <li><img th:src="${album.imageUrl}"  th:alt="${album.title}"/></li>
+
 </ul>
 </body>
 </html>
