--- a/src/main/resources/static/css/splash.css
+++ b/src/main/resources/static/css/splash.css
@@ -1,10 +1,43 @@
-h1{
-    text-align: center;
-    background-color: black;
-    color: red;
+#menu-outer {
+    height: 84px;
+    /*background: url(images/bar-bg.jpg) repeat-x;*/
 }
-h3{
-    text-align: center;
-    background-color: red;
-    color: black;
+/**{*/
+/*    background-image: url("https://images.unsplash.com/photo-1514320291840-2e0a9bf2a9ae?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");*/
+/*    background-repeat: no-repeat;*/
+/*}*/
+.table {
+    display: table;   /* Allow the centering to work */
+    margin: 0 auto;
+}
+
+ul#horizontal-list {
+    min-width: 696px;
+    list-style: none;
+    padding-top: 20px;
+    float: left;
+    width: 50%;
+    margin-bottom: 1.65%;
+}
+ul#horizontal-list li {
+    display: inline;
+}
+header{
+    background-color: #B68D40;
+}
+header h1{
+    font-family: 'Roboto', sans-serif;
+    float: left;
+    width: 40%;
+    padding-left: 3%;
+
+}
+
+header ul li {
+    padding-right: 2%;
+
+}
+main{
+    clear: both;
+
 }
