--- a/src/main/resources/templates/album.html
+++ b/src/main/resources/templates/album.html
@@ -5,23 +5,20 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Submission Form</h1>
-<form action="#" th:action="@{/albums}" th:object="${album}" method="POST">
-    <p>Title: <input type="text" th:field="*{title}"/></p>
-    <p>Artist: <input type="text" th:field="*{artist}"/></p>
-    <p>songCount: <input type="number" th:field="*{songCount}"/></p>
-    <p>length: <input type="number" th:field="*{length}"/></p>
-    <p>imageUrl: <input type="number" th:field="*{imageUrl}"/></p>
-    <p><input type="submit" value="Submit"/> <input type="reset" value="Reset"></p>
-</form>
-
-<ul th:each="album:${albums}">
+<a href="/"><< Home </a>
+<ul th:each="album:${albums1}">
     <h1 th:text="${album.title}"></h1>
     <li th:text="${album.artist}"></li>
     <li th:text="${album.songCount}"></li>
     <li th:text="${album.length}"></li>
     <li><img th:src="${album.imageUrl}"  th:alt="${album.title}"/></li>
-
+</ul>
+<ul th:each="album:${albums2}">
+    <h1 th:text="${album.title}"></h1>
+    <li th:text="${album.artist}"></li>
+    <li th:text="${album.songCount}"></li>
+    <li th:text="${album.length}"></li>
+    <li><img th:src="${album.imageUrl}"  th:alt="${album.title}"/></li>
 </ul>
 </body>
 </html>
